Bug 244907 - Skip all uppercase words functionality not implemented
Summary: Skip all uppercase words functionality not implemented
Status: VERIFIED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: composer (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
: 244482 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-07-16 23:12 UTC by Sabine Faure
Modified: 2010-09-01 21:54 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sabine Faure 2010-07-16 23:12:26 UTC
Version:           unspecified (using Devel) 
OS:                Linux

Uppercase words are still underlined by the spellchecker after the 'Skip all uppercase words' check box has been checked.

Reproducible: Always

Steps to Reproduce:
- Launch Kontact and go to Kmail
- Click on 'New Message'
- Go to Settings menu/Spellchecker...
- Leave the Default language as English
- Uncheck all the check boxes (if any are checked)
- Click on 'Ok'
- In the composer text edit type the following lines:
'The boat was sending a SOS to the port.
KOFFICE is an office suite on Linux.'
- the SOS is not underlined but KOFFICE is by the spellchecker
- Go back to Settings menu/Spellchecker...
- Check the 'Skip all uppercase words' check box only
- Click on 'Ok'

Actual Results:  
The KOFFICE is still underlined eventhough the 'Skip all uppercase words' has been checked.

Expected Results:  
No uppercase words should be underlined by the spellchecker.

Trunk, Svn Rev 1150720
Comment 1 Laurent Montel 2010-07-19 13:42:18 UTC
SVN commit 1151701 by mlaurent:

Fix "Bug 244907 -  Skip all uppercase words functionality not implemented"
CCBUG: 244907


 M  +1 -1      emailquotehighlighter.cpp  
 M  +16 -0     textedit.cpp  
 M  +16 -1     textedit.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1151701
Comment 2 Laurent Montel 2010-07-19 13:46:21 UTC
Too bad we can't backport directly to kde -4.4 (we need to patch kdepimlibs-4.4.
There is a bug yet.
Will continue to debug it
Comment 3 Laurent Montel 2010-07-19 13:55:16 UTC
SVN commit 1151710 by mlaurent:

Fix " Bug 244907 -  Skip all uppercase words functionality not implemented"
BUG: 244907


 M  +2 -0      filter.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1151710
Comment 4 Michel Ludwig 2010-07-20 09:47:50 UTC
*** Bug 244482 has been marked as a duplicate of this bug. ***
Comment 5 Sabine Faure 2010-07-23 02:08:26 UTC
It is corrected now.

No uppercase words is underlined by the spellchecker now when the 'Skip all uppercase words' check box has been checked and providing that the'Automatic spell checking enabled by default check box has been checked too.

Trunk, Svn Rev 1153240
Comment 6 Michel Ludwig 2010-08-29 11:05:39 UTC
SVN commit 1169440 by mludwig:

- Add a 'restore' method to 'Sonnet::BackgroundChecker', which allows it to read a given spell check configuration and then to pass it on to the filter object that is used internally. The implementation is similar to what is done inside 'Sonnet::Highlighter'.
- Use the restore method inside KatePart to finally fix bug 244907 for KatePart as well.

(Once this is merged with Kate's git repository, Kate devs will have to update their working copy of kdelibs.)

BUG: 244907
CCMAIL: kwrite-devel@kde.org



 M  +8 -0      kate/spellcheck/ontheflycheck.cpp  
 M  +1 -3      kate/spellcheck/spellcheckdialog.cpp  
 M  +8 -0      kdecore/sonnet/backgroundchecker.cpp  
 M  +3 -0      kdecore/sonnet/backgroundchecker.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1169440
Comment 7 Christoph Cullmann 2010-08-29 15:16:27 UTC
SVN commit 1169515 by cullmann:

guard the new code
we want to let kate still build against last stable, to ease development, as long as possible without to much hacks
   
BUG: 244907
CCMAIL: kwrite-devel@kde.org


 M  +6 -0      ontheflycheck.cpp  
 M  +3 -0      spellcheckdialog.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1169515
Comment 8 Sabine Faure 2010-09-01 21:54:32 UTC
It is corrected now.

Note to retest: Check the Automatic spell checking enabled by default check box contrary to what the bug description mentions.
The Automatic spell checking was always enabled when I first tested this whether the check box was checked or not (I reported a bug about that).

Neither SOS nor KOFFICE is underlined by the spellchecker.

However, for the new settings (ex: Skip all uppercase words checked) to be effective on an already typed text the user has to enter at least a space or hit enter.
Is that a bug I should report or is this supposed to work that way?

Trunk, Svn Rev 1170619