- Add a 'restore' method to 'Sonnet::BackgroundChecker', which allows it to read a given spell check configuration and then to pass it on to the filter object that is used internally. The implementation is similar to what is done inside 'Sonnet::Highlighter'. - Use the restore method inside KatePart to finally fix bug 244907 for KatePart as well.

(Once this is merged with Kate's git repository, Kate devs will have to update their working copy of kdelibs.)

BUG: 244907
CCMAIL: kwrite-devel@kde.org


svn path=/trunk/KDE/kdelibs/kate/; revision=1169440